--- a/src/html/demo01-2.html
+++ b/src/html/demo01-2.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="#ffff33">
 <p>欢迎使用Google搜索！</p>
-<img src="../src/google.png" width="275" height="95" border="0" alt="">
-<hr size="5" color="#0033ff">
+<img alt="" border="0" height="95" src="../src/google.png" width="275">
+<hr color="#0033ff" size="5">
 </body>
 </html>
