--- a/src/html/demo04-3.html
+++ b/src/html/demo04-3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="d1">
-    <img alt="" src="/src/img.png" height="300" width="300">
+    <img alt="" height="300" src="/src/img.png" width="300">
     <div>
         <ul>
             <li>2017<span id="span1">央视</span>综艺节目发力 彰显工艺大爱
