--- a/src/html/demo03-1.html
+++ b/src/html/demo03-1.html
@@ -1,5 +1,4 @@
-
-<html xmlns="http://www.w3.org/1999/xhtml" lang="">
+<html lang="" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
     <title>桂林山水风景图片</title>
