--- a/src/html/demo03-2.html
+++ b/src/html/demo03-2.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-    <meta http-equiv="X-Frame-Options" content="deny">
-    <meta http-equiv="X-Frame-Options" content="sameorigin">
+    <meta content="deny" http-equiv="X-Frame-Options">
+    <meta content="sameorigin" http-equiv="X-Frame-Options">
     <title>浮动框架应用</title>
     <style>
         ul {
@@ -26,7 +26,8 @@
 </h3>
 <ul>
     <li>
-        <iframe align="middle" height="300" name="left" src="https://mirrors.tuna.tsinghua.edu.cn/" width="400"></iframe>
+        <iframe align="middle" height="300" name="left" src="https://mirrors.tuna.tsinghua.edu.cn/"
+                width="400"></iframe>
         <p><a href="http://www.taobao.com" target="left">在左边浮动框架中打开淘宝</a></p>
     </li>
     <li>
