--- a/src/html/demo03-1.html
+++ b/src/html/demo03-1.html
@@ -22,7 +22,7 @@
         img {
             width: 100px;
             height: 100px;
-            border: 0px;
+            border: 0;
         }
     </style>
 </head>
