--- a/src/project/demo01.html
+++ b/src/project/demo01.html
@@ -55,7 +55,6 @@
                 </li>
                 <li class="li-one"><a target="">组织机构</a>
                     <ul>
-
                         <li><a class="sech" target="">党政机构</a></li>
                         <li><a class="sech" target="">教学单位</a></li>
                     </ul>
@@ -193,10 +192,12 @@
                                                                                                    width="378"></a></li>
                                     <li><a title="学校召开疫情防控工作会议"></a><a target="_blank"><img alt=""
                                                                                             height="245"
-                                                                                            src="images/C940A3912B9C94069150233F788_CB4990A2_CD09.jpg" width="378"></a></li>
+                                                                                            src="images/C940A3912B9C94069150233F788_CB4990A2_CD09.jpg"
+                                                                                            width="378"></a></li>
                                     <li><a title="学校召开疫情防控工作领导小组会议"></a><a target="_blank"><img alt=""
                                                                                                 height="245"
-                                                                                                src="images/ECFDD56B6029F699731952EEFDE_C242F82A_DD83.jpg" width="378"></a>
+                                                                                                src="images/ECFDD56B6029F699731952EEFDE_C242F82A_DD83.jpg"
+                                                                                                width="378"></a>
                                     </li>
                                 </ul>
                             </div>
@@ -440,55 +441,12 @@
                                 <P id="main-links-one"><IMG alt="" src="images/maozi.png">校内资源 </P>
                                 <DL class="select">
                                     <DT>校内资源</DT>
-                                    <DD>
-                                        <UL>
-                                            <li><a target="_blank">服务信息</a></li>
-                                            <li><a href="http://news.hrbust.edu.cn/info/1013/17325.htm" target="_blank">理工视频</a>
-                                            </li>
-                                            <li><a href="#" target="_blank">============</a></li>
-                                            <li><a href="http://dag.hrbust.edu.cn" target="_blank">档案馆</a></li>
-                                            <li><a href="https://www.hljbys.org.cn/school/index?mark=hrbust"
-                                                   target="_blank">招生与就业工作处</a></li>
-                                            <li><a href="http://gjyj.hrbust.edu.cn/" target="_blank">高教研究与教学质量评估中心</a>
-                                            </li>
-                                            <li><a href="http://xsll.hrbust.edu.cn" target="_blank">学术理论研究部(原编辑部)</a>
-                                            </li>
-                                            <li><a href="http://gczx.hrbust.edu.cn/" target="_blank">工程训练中心</a></li>
-                                            <li><a href="http://yishu.hrbust.edu.cn" target="_blank">艺术学院</a></li>
-                                            <li><a href="http://jzsj.hrbust.edu.cn/" target="_blank">建筑设计研究院</a></li>
-                                            <li><a href="#" target="_blank">============</a></li>
-                                            <li><a href="http://hxxy.hrbust.edu.cn" target="_blank">化学与环境工程学院</a></li>
-                                            <li><a href="http://software.hrbust.edu.cn/" target="_blank">软件与微电子学院</a>
-                                            </li>
-                                            <li><a href="http://fxy.hrbust.edu.cn" target="_blank">法学院</a></li>
-                                            <li><a href="http://gjxy.hrbust.edu.cn/" target="_blank">国际文化教育学院</a></li>
-                                        </UL>
-                                    </DD>
                                 </DL>
                             </DIV>
                             <DIV style="z-index: 0">
                                 <P id="main-links-two"><IMG alt="" src="images/lianjie.png">特色网站 </P>
                                 <DL class="select z-index0">
                                     <DT>特色网站</DT>
-                                    <DD>
-                                        <UL>
-                                            <li><a href="http://www.yiban.cn/"
-                                                   target="_blank">易班网</a>
-                                            </li>
-                                            <li><a href="http://202.118.201.211/business/login.jsp"
-                                                   target="_blank">科研系统</a>
-                                            </li>
-                                            <li><a href="https://www.xuexi.cn/"
-                                                   target="_blank">理论学习网</a>
-                                            </li>
-                                            <li><a href="http://202.118.201.100"
-                                                   target="_blank">校园卡查询</a>
-                                            </li>
-                                            <li><a href="http://hrbust.cuepa.cn/"
-                                                   target="_blank">理工校报</a>
-                                            </li>
-                                        </UL>
-                                    </DD>
                                 </DL>
                             </DIV>
                         </DIV>
@@ -503,47 +461,36 @@
                             <li style="width:200px"><img alt="" src="images/001.png"/><a
                                     href="http://dsxxjy.hrbust.edu.cn/" target="_blank">党史学习教育</a></li>
 
-
                             <li style="width:200px"><img alt="" src="images/0010.png"/><a
                                     href="http://news.hrbust.edu.cn/zxzp.htm" target="_blank">人才招聘</a></li>
-
 
                             <li style="width:200px"><img alt="" src="images/001.png"/><a href="https://www.xuexi.cn/"
                                                                                          target="_blank">学习强国</a></li>
 
-
                             <li style="width:200px"><img alt="" src="images/007.png"/><a
                                     href="http://yqfk.hrbust.edu.cn" target="_blank">疫情防控</a></li>
 
-
                             <li style="width:200px"><img alt="" src="images/007.png"/><a
                                     href="http://wsjf.hrbust.edu.cn/wsyh" target="_blank">学生缴费</a></li>
-
 
                             <li style="width:200px"><img alt="" src="images/009.png"/><a href="http://djz.hrbust.edu.cn"
                                                                                          target="_blank">电介质工程国家重点实验室</a>
                             </li>
 
-
                             <li style="width:200px"><img alt="" src="images/004.png"/><a
                                     href="http://wangdaheng.hrbust.edu.cn" target="_blank">我们的老校长——王大珩</a></li>
-
 
                             <li style="width:200px"><img alt="" src="images/009.png"/><a
                                     href="http://222.27.192.56/virexp/" target="_blank">智能制造虚仿实验教学中心</a></li>
 
-
                             <li style="width:200px"><img alt="" src="images/007.png"/><a
                                     href="https://www.hljgbjy.org.cn/" target="_blank">干部在线学习中心</a></li>
-
 
                             <li style="width:200px"><img alt="" src="images/008.png"/><a
                                     href="http://xxgk.hrbust.edu.cn" target="_blank">信息公开</a></li>
 
-
                             <li style="width:200px"><img alt="" src="images/005.png"/><a
                                     href="http://202.118.201.17/xtfw/" target="_blank">校园综合协调服务平台</a></li>
-
 
                             <li style="width:200px"><img alt="" src="images/004.png"/><a href="http://zs.hrbust.edu.cn/"
                                                                                          target="_blank">本科招生网</a></li>
@@ -557,16 +504,8 @@
         <DIV class="footer-con">
             <DIV>
                 <DIV class="footer-con1"><!-- 版权内容请在本组件"内容配置-版权"处填写 -->
-                    <p>
-                        版权所有© 哈尔滨理工大学&nbsp; <a href="http://beian.miit.gov.cn" target="_blank">黑ICP备05008706号</a> &nbsp;技术支持:
-                        <a href="http://xjzx.hrbust.edu.cn/" target="_blank">现代教育技术中心</a>，内容负责：<a
-                            href="http://xcb.hrbust.edu.cn/" target="_blank">宣传部</a>
-                    </p>
-                    <p>
-                        地址：哈尔滨市南岗区学府路52号 电话：0451-86390114 邮政编码：150080&nbsp;<a href="http://en.hrbust.edu.cn"
-                                                                              target="_blank">[English]</a>&nbsp;<a
-                            title="手机版"> [手机版]</a>
-                    </p></DIV>
+                    <p>版权所有© 哈尔滨理工大学&nbsp; <a href="http://beian.miit.gov.cn" target="_blank">黑ICP备05008706号</a> &nbsp;技术支持:<a href="http://xjzx.hrbust.edu.cn/" target="_blank">现代教育技术中心</a>，内容负责：<a href="http://xcb.hrbust.edu.cn/" target="_blank">宣传部</a></p>
+                    <p>地址：哈尔滨市南岗区学府路52号 电话：0451-86390114 邮政编码：150080&nbsp;<a href="http://en.hrbust.edu.cn" target="_blank">[English]</a>&nbsp;<a title="手机版"> [手机版]</a></p></DIV>
                 <DIV class="footer-con2"><a>联系我们</a>
                     <a>交通地图</a>
                     <script type="text/javascript">document.write(unescape("%3Cspan id='_ideConac' %3E%3C/span%3E%3Cscript  type='text/javascript'%3E%3C/script%3E"));</script>
@@ -581,8 +520,7 @@
                                 <li><a href="http://www.gov.cn">--中央政府网--</a></li>
                                 <li><a href="http://www.people.com.cn">--人民网--</a></li>
                                 <li><a href="http://www.moe.edu.cn">--教育部--</a></li>
-                                <li><a href="http://www.edu.cn">--教育和科研计算机网--</a>
-                                </li>
+                                <li><a href="http://www.edu.cn">--教育和科研计算机网--</a></li>
                                 <li><a href="http://www.hlj.gov.cn">--黑龙江人民政府--</a></li>
                                 <li><a href="http://www.dbw.cn">--东北网--</a></li>
                                 <li><a href="http://www.tsinghua.edu.cn">--清华大学--</a></li>
