--- a/src/project/demo01.html
+++ b/src/project/demo01.html
@@ -104,25 +104,10 @@
     <div class="banner">
         <div class="banner-con">
             <div class="slideBox" id="slideBox">
-                <div class="hd">
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
                 <!--                图片轮播栏  未完成！-->
                 <div class="bd">
                     <ul>
                         <li> <img alt="" src="images/guoqingjie.jpg"> </li>
-                        <li> <a href="http://www.hrbust.edu.cn/info/1150/11710.htm" target="_blank"><img alt="" src="images/wangdaheng.jpg"></a> </li>
-                        <li> <img alt="" src="images/yingxin2021.jpg"> </li>
-                        <li> <img alt="" src="images/jiandangbainianxinwenwang.jpg"> </li>
-                        <li> <a href="http://dsxxjy.hrbust.edu.cn/" target="_blank"><img alt="" src="images/22.jpg"></a> </li>
-                        <li> <img alt="" src="images/tianqiao.jpg"> </li>
                     </ul>
                 </div>
             </div>
@@ -139,21 +124,16 @@
                                 <!--                                轮播图-->
                                 <ul class="items">
                                     <li><a title="【聚焦党代会 卓越向百年】学校召开第四次党代会筹..."></a><a target="_blank"><img alt="" height="245" src="images/1201899C65F859786C6D5CFB290_ADB2FA33_BE0D.jpg" width="378px"></a> </li>
-                                    <li><a title="学校师生同心抗疫 上好“国庆假期一课”"></a><a target="_blank"><img alt="" height="245" src="images/67AC800FFB2314051D97E93A5AA_AFB394CA_E0BC.jpg" width="378"></a></li>
-                                    <li><a title="学校召开疫情防控工作会议"></a><a target="_blank"><img alt="" height="245" src="images/C940A3912B9C94069150233F788_CB4990A2_CD09.jpg" width="378"></a></li>
-                                    <li><a title="学校召开疫情防控工作领导小组会议"></a><a target="_blank"><img alt="" height="245" src="images/ECFDD56B6029F699731952EEFDE_C242F82A_DD83.jpg" width="378"></a> </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="main-con-box1-left-bottom-news">
                             <ul>
                                 <ul>
-                                    <li> <a title="【聚焦党代会 卓越向百年】学校召开第四次党代会筹备工作动员会暨第一次工作推进会" target="_blank">【聚焦党代会
-                                        卓越向百年】学校召开第四次党代会筹...</a><span>10/05</span> </li>
+                                    <li> <a title="【聚焦党代会 卓越向百年】学校召开第四次党代会筹备工作动员会暨第一次工作推进会" target="_blank">【聚焦党代会 卓越向百年】学校召开第四次党代会筹...</a><span>10/05</span> </li>
                                     <li> <a title="校领导到校史馆参观调研" target="_blank">校领导到校史馆参观调研</a><span>10/07</span> </li>
                                     <li> <a target="_blank" title="担当传递汇聚合力 众志成城抗击疫情">担当传递汇聚合力众志成城抗击疫情</a><span>10/06</span> </li>
-                                    <li> <a target="_blank" title="【聚焦党代会 卓越向百年】经济与管理学院：全面加强党的建设 着力构建新发展格局 在笃行实干中谱写经济与管理学院高质量发展的新篇章">【聚焦党代会
-                                        卓越向百年】经济与管理学院：全面加...</a><span>10/05</span> </li>
+                                    <li> <a target="_blank" title="【聚焦党代会 卓越向百年】经济与管理学院：全面加强党的建设 着力构建新发展格局 在笃行实干中谱写经济与管理学院高质量发展的新篇章">【聚焦党代会 卓越向百年】经济与管理学院：全面加...</a><span>10/05</span> </li>
                                     <li> <a target="_blank" title="学校师生同心抗疫 上好“国庆假期一课”">学校师生同心抗疫上好“国庆假期一课”</a><span>10/04</span> </li>
                                     <li> <a title="学校召开校领导到职见面会" target="_blank">学校召开校领导到职见面会</a><span>10/04</span> </li>
                                     <li> <a title="【为党旗增辉】李新灵：以信仰之光照亮学生前行的路" target="_blank">【为党旗增辉】李新灵：以信仰之光照亮学生前行的路</a><span>10/04</span> </li>
@@ -329,4 +309,5 @@
         </div>
     </div>
 </div>
-</body></html>
+</body>
+</html>
